--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
